<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_name">Name</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_price">Price</string>

    <string name="category_sales">Sales</string>

    <string name="hint_product_name">Name</string>

    <string name="hint_product_sales">Sales</string>

    <string name="hint_product_quantity">Quantity</string>

    <string name="hint_product_price">Price</string>

    <string name="unit_product_price">euro</string>

    <string name="error_saving_product">Error saving product</string>

    <string name="product_saved">Product saved</string>

    <string name="product_updated">Product updated</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="catalog_delete_products_successful">All products deleted</string>

    <string name="catalog_delete_products_failed">Error with deleting all products</string>

    <string name="catalog_delete_dialog_msg">Delete all products?</string>

    <string name="error_updating_product">Error updating Product</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
</resources>
