<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_name" />

        <EditText
            android:id="@+id/edit_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_sales" />

        <TextView
            android:id="@+id/edit_product_sales"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_product_sales"
            android:inputType="textCapWords"
            android:paddingLeft="4dp"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout

            style="@style/CategoryStyle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/category_quantity"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus"
                    android:layout_width="32dp"
                    android:layout_height="37dp"
                    android:onClick="addQuantity"
                    android:text="+"
                    android:textAppearance="?android:textAppearanceSmall" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="32dp"
                    android:layout_height="37dp"
                    android:onClick="subtractQuantity"
                    android:text="-"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/edit_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_product_quantity"
            android:paddingLeft="4dp"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/category_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_product_price" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:onClick="orderProduct"
        android:text="Order" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/select_picture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="openImageSelector"
                android:text="Select picture" />

            <Button
                android:id="@+id/take_picture"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:onClick="takePicture"
                android:text="Take picture" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:scaleType="centerCrop" />
    </LinearLayout>
</LinearLayout>